Fix background gap.

--- a/order-summary-component-main/styles/input.scss
+++ b/order-summary-component-main/styles/input.scss
@@ -14,8 +14,9 @@ body {
     height: 100%;
     background-image: url("../images/pattern-background-mobile.svg");
     background-repeat: no-repeat;
-    background-size: 100% 15em;
+    background-size: 105% 15em;
     background-color: hsl(225, 100%, 94%);
+    overflow: hidden;
 }
 
 // ------ Card ------
@@ -140,7 +141,7 @@ body {
 @media screen and (min-width: 376px) {
     body {
         background-image: url("../images/pattern-background-desktop.svg");
-        background-size: contain;
+        background-size: 105%;
     }
     .card {
       width: 25rem;
