--- a/order-summary-component-main/styles/output.css
+++ b/order-summary-component-main/styles/output.css
@@ -14,8 +14,9 @@ body {
   height: 100%;
   background-image: url("../images/pattern-background-mobile.svg");
   background-repeat: no-repeat;
-  background-size: 100% 15em;
+  background-size: 105% 15em;
   background-color: #e0e8ff;
+  overflow: hidden;
 }
 
 .card {
@@ -136,7 +137,7 @@ body {
 @media screen and (min-width: 376px) {
   body {
     background-image: url("../images/pattern-background-desktop.svg");
-    background-size: contain;
+    background-size: 105%;
   }
 
   .card {
